# HoneycombPlots

./: CMakeLists.txt  README.md  build-libs.cmd  fetch-libs.cmd  vcpkg.json
dat/: CaliforniaHousing.csv  GenderEquality-EU28-2020.csv  Methodology_AmberInclusions.csv  Methodology_DiamondCut.csv  Methodology_ReliefMosaic.csv  Tornados_1950-2019.csv  UserStudy_Task1_1.csv  UserStudy_Task1_2.csv  UserStudy_Task1_3.csv  UserStudy_Task2_1.csv  UserStudy_Task2_2.csv  UserStudy_Task2_3.csv  UserStudy_Task3_1.csv  UserStudy_Task3_2.csv  UserStudy_Task3_3.csv  UserStudy_Task4_1.csv  UserStudy_Task4_2.csv  UserStudy_Task4_3.csv
res/tiles/: acc-fs.glsl  bounding-quad-gs.glsl  discrepancy-fs.glsl  discrepancy-vs.glsl  globals.glsl  max-val-fs.glsl  point-circle-fs.glsl  point-circle-gs.glsl  point-circle-vs.glsl  point-fs.glsl  point-vs.glsl  shade-fs.glsl
res/tiles/hexagon/: globals.glsl  hexagon-acc-vs.glsl  hexagon-grid-fs.glsl  hexagon-grid-gs.glsl  hexagon-grid-vs.glsl  hexagon-normals-fs.glsl  hexagon-tiles-fs.glsl
res/tiles/square/: square-acc-vs.glsl  square-grid-fs.glsl  square-grid-gs.glsl  square-grid-vs.glsl  square-normals-fs.glsl  square-tiles-fs.glsl
src/: CMakeLists.txt  CameraInteractor.cpp  CameraInteractor.h  Interactor.cpp  Interactor.h  Scene.cpp  Scene.h  Viewer.cpp  Viewer.h  main.cpp
src/CSV/: Table.cpp  Table.h
src/renderer/: BoundingBoxRenderer.cpp  BoundingBoxRenderer.h  Renderer.cpp  Renderer.h
src/renderer/tileRenderer/: HexTile.cpp  HexTile.h  SquareTile.cpp  SquareTile.h  Tile.cpp  Tile.h  TileRenderer.cpp  TileRenderer.h
